--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,13 @@ h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    column-rule: #252525;
+    color: #252525;
 }    
 
 #logo   {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /*navigation links*/
@@ -49,11 +50,11 @@ h1, h2 {
 }
 
 #menu a:hover   {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid red;
 }
 
 .active {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid red;
 }
 
 /*Hero image and cover text*/
@@ -109,4 +110,28 @@ h1, h2 {
     right: 150px;
 
     position: absolute;
+}
+
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about    {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+
+#center-about    {
+    width:33%;
+    margin: 0 auto;
+    background-color: green;
 }
