--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     color: #3a3a3a;
 }
 
-    /*headings and logo*/
+/*Headings and Logo*/
 
 h1, h2 {
     font-family: Oswald, sans-serif;
@@ -27,7 +27,7 @@ h1, h2 {
     margin-left: 30px;
 }
 
-/*navigation links*/
+/*Navigation Links*/
 
 #menu   {
     font-size: 110%;
@@ -50,14 +50,14 @@ h1, h2 {
 }
 
 #menu a:hover   {
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #3a3a3a;
 }
 
 .active {
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #3a3a3a;
 }
 
-/*Hero image and cover text*/
+/*Hero image and Cover text*/
 
 #hero-outer {
     height: 600px;
@@ -76,13 +76,13 @@ h1, h2 {
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
 
-    /* animates zoom effect on loading page */
+/*Animates zoom effect on loading page*/
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
-/* creates the level of zoom for hero image */
+/*Creates the level of zoom for hero image*/
 @keyframes hero-zoom    {
     from{
         transform: scale(1);
@@ -240,9 +240,40 @@ footer  {
     clear: both;
     line-height: 0;
     column-count: 4;
-    column-gap: 0px;
+    column-gap: 0;
 }
 
 #photos > img   {
     width: 100%;
+}
+
+/*Media Queries*/
+
+/*For larger to medium screen size; from 1200px wide and down*/
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome    {
+        padding: 30px 0;
+        margin: 0;
+    }
+    #left-about, #right-about   {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about   {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+    hr  {
+        display: none;
+    }
 }
